Minor design changes

--- a/Styles/darkDesign.css
+++ b/Styles/darkDesign.css
@@ -334,7 +334,7 @@ h4.greeting span:nth-child(5) {
 }
 
 .cardTitles {
-  color: #d0565e;
+  color: #fd8c69;
   text-shadow: 2px 2px 3px #000000;
   margin-bottom: 0.75em;
   font-size: 1.2em;
