--- a/Styles/lightDesign.css
+++ b/Styles/lightDesign.css
@@ -254,11 +254,52 @@ footer:hover {
 }
 
 /* ABOUT ME SECTION*/
+#hello {
+  text-align: left;
+}
+
+.block {
+  width: 100%;
+  height: 70vh;
+  background-color: #e3e1e3;
+  border-radius: 20px;
+  box-shadow: 2px 2px 3px #252525;
+}
+
+#summary {
+  width: 80%;
+  height: fit-content;
+  margin: auto;
+  padding: 0.5rem;
+
+  border: #252525;
+  border-style: dashed;
+
+  text-align: justify;
+}
+
+#learnMoreButton {
+  float: left;
+  padding: 0.5rem;
+}
+
+#learnMoreButton button {
+  border: none;
+  border-radius: 20px;
+  margin: auto;
+  padding: 0.25rem;
+}
+
 .mainPictures {
-  border-radius: 200px;
+  border-radius: 50px;
   box-shadow: 2px 2px 3px #252525;
   margin: 20px;
   transition: 0.2s ease-in;
+}
+
+img.mainPictures {
+  aspect-ratio: 0.7/1;
+  width: 60%;
 }
 
 .greet {
